syntax = "proto3";

option go_package = "github.com/ranjankuldeep/DisBlocker/proto";

message Block {
    Header header = 1;
    repeated Transaction transactions = 2;
}

message Header {
    int32 version = 1;   
    int32 height = 2;    
    bytes prevHash = 3;
    bytes rootHash = 4; // merkle root of txs
    int64 timeStamp = 5;
}
message TxInput {
    // The prev hash of the transaction cotanining 
    // the output we want to spend.
    bytes prevHash = 1;
    // The index of the output of the previous transactions
    // we want to spend.
    uint32 prevOutIndex = 2;
    bytes publicKey =3;
    bytes signature =4;
}
message TxOutput {
    int64 amount =1;
    bytes address = 2;
}

message Transaction {
    int32 version=1;
    repeated TxInput inputs = 2;
    repeated TxOutput outputs = 3;
}

// Node will be a grpc server.
// HandleTransaction is method defined to handle request or response.
service Node {
    rpc HandShake(Version) returns (Version);
    rpc HandleTransaction(Transaction) returns (Ack);
}   

message Version{
    string version =1;
    int32 height =2;
}
message Ack {}
message None {}